HelloUltraviolet/Fixtures/RejectedSource/Expressions/CallStaticJudgementsAndArgumentTyping/Source/Main.uv
//! Rejected call specimen for call static judgements and argument typing.

public procedure oneCallArgument(value: i32) -> i32 {
    return value
}

public procedure callStaticJudgementsAndArgumentTypingReference() -> i32 {
    return oneCallArgument()
}
